# bird-ospf-link-db-parser

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml
example_data/: causing_error.txt  ospf_state_output_apr_16_2023.txt  ospf_state_output_mar_29_2023.txt
src/bird_parser/: main.py  output_schema.json  parse_bird_output.py  utils.py
test/: test_comprehensive.py  test_live_data.py  test_simple.py
test/artifacts/: expected_output.json  ospf_state_output_apr_29_2023.txt
