[project]
name = "bird-ospf-parse-link-db"
version = "1.1"
dependencies = [
    "python-dotenv",
    "pytz",
    "python-dateutil",
    "jsonschema",
]

[project.optional-dependencies]
test = [
    "pytest >= 6",
    "coverage",
    "freezegun"
]

[project.scripts]
parse-bird-link-db = "bird_parser:main.main"