[project]
name = "bird-ospf-link-db-parser"
version = "1.1.2"
authors = [{ name = "Andrew Dickinson", email = "andrew.dickinson.0216@gmail.com" }]
description = "Parse the text output from the BIRD Routing Daemon's OSPF link database into machine readable JSON"
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "python-dotenv",
    "pytz",
    "python-dateutil",
    "jsonschema",
]

[project.urls]
repository = "https://github.com/Andrew-Dickinson/bird-ospf-link-db-parser"

[project.optional-dependencies]
test = [
    "pytest >= 6",
    "coverage",
    "freezegun",
]
dev = [
    "build",
    "twine"
]

[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project.scripts]
parse-bird-link-db = "bird_parser:main.main"

[options.packages.find]
where = "src"